# auroraview

./: $null  .codecov.yml  .commitlintrc.yml  .gitattributes  .gitcommitmsg  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  ACTION_PLAN_FOR_USER.md  AGENTES.md  AGENTS.md  API_MODERNIZATION_SUMMARY.md  CHANGELOG.md  CHANGELOG_WINDOW_CLOSE_FIX.md  CI_TESTING_SETUP.md  CLAUDE.md  CLEANUP_TODO.md  CODE_ASSESSMENT_REPORT.md  CONTRIBUTING.md  CRITICAL_FIX_REQUIRED.md  Cargo.toml  DCC_THREADING_SOLUTION.md  DESIGN_REVIEW.md  EVENT_LOOP_FIX.md  EXAMPLE_JS_ASSETS_USAGE.md  FINAL_SUMMARY.md  FIX_SUMMARY.md  GEMINI.md  IMMEDIATE_FIX_PLAN.md  LOCAL_TEST_SUMMARY.md  MAYA_CONTEXT_MENU_FIX.md  MAYA_INTEGRATION_SUMMARY.md  MAYA_QUICK_START.md  MAYA_TESTING_GUIDE.md  MULTI_PYTHON_TEST_REPORT.md  NEXT_STEPS.md  QUICK_START.md  README.md  README_MAYA_INTEGRATION.md  README_zh.md  (+51 more)
crates/aurora-protect/: Cargo.toml
crates/aurora-protect/tests/: bytecode_integration_test.rs
crates/auroraview-ai-agent/: Cargo.toml
crates/auroraview-ai-agent/src/: agent.rs  error.rs  lib.rs  message.rs  session.rs
crates/auroraview-ai-agent/tests/: actions_tests.rs  agent_tests.rs  protocol_tests.rs  session_tests.rs
crates/auroraview-assets/: Cargo.toml  build.rs  package.json  tsconfig.json
crates/auroraview-assets/frontend/: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
crates/auroraview-assets/src/: lib.rs
crates/auroraview-assets/tests/: assets_tests.rs
crates/auroraview-bookmarks/: Cargo.toml
crates/auroraview-bookmarks/src/: bookmark.rs  error.rs  folder.rs  lib.rs  manager.rs
crates/auroraview-bookmarks/tests/: bookmark_tests.rs
crates/auroraview-browser/: Cargo.toml
crates/auroraview-browser/src/: browser.rs  config.rs  devtools.rs  error.rs  lib.rs
crates/auroraview-browser/tests/: bookmarks_tests.rs  config_tests.rs  devtools_tests.rs  error_tests.rs  history_tests.rs  navigation_tests.rs  tab_tests.rs  theme_tests.rs
crates/auroraview-cli/: Cargo.toml  build.rs
crates/auroraview-cli/src/: lib.rs  main.rs  packed.rs  protocol_handlers.rs
crates/auroraview-cli/tests/: args_tests.rs  cli_tests.rs  flag_pair_tests.rs  ipc_integration_tests.rs  lib_tests.rs  pack_args_tests.rs  pack_merge_rule_tests.rs  packed_env_var_tests.rs  packed_tests.rs  run_args_tests.rs
crates/auroraview-dcc/: Cargo.toml
crates/auroraview-dcc/src/: config.rs  error.rs  lib.rs  webview.rs  window_manager.rs
crates/auroraview-dcc/tests/: config_tests.rs  error_tests.rs  ipc_tests.rs  webview_thread_safety_tests.rs  window_manager_tests.rs
crates/auroraview-desktop/: Cargo.toml
crates/auroraview-desktop/src/: config.rs  error.rs  lib.rs  window_manager.rs
crates/auroraview-desktop/tests/: config_tests.rs  dragdrop_sink_tests.rs  error_tests.rs  event_loop_tests.rs  ipc_tests.rs  tray_tests.rs  window_manager_tests.rs
crates/auroraview-devtools/: Cargo.toml
crates/auroraview-devtools/src/: cdp.rs  config.rs  console.rs  error.rs  lib.rs  manager.rs  network.rs
crates/auroraview-devtools/tests/: devtools_tests.rs
crates/auroraview-downloads/: Cargo.toml
crates/auroraview-downloads/src/: error.rs  item.rs  lib.rs  manager.rs  queue.rs
crates/auroraview-downloads/tests/: download_tests.rs
crates/auroraview-extensions/: Cargo.toml
crates/auroraview-extensions/src/: error.rs  host.rs  injection.rs  installer.rs  lib.rs  manifest.rs  runtime.rs  service_worker.rs  storage.rs  view_manager.rs
crates/auroraview-extensions/tests/: test_extension_host.rs  test_extension_runtime.rs  test_installer.rs  test_polyfill.rs  test_runtime_api.rs  test_scripting_api.rs  test_tabs_api.rs
crates/auroraview-history/: Cargo.toml
crates/auroraview-history/src/: entry.rs  error.rs  lib.rs  manager.rs  search.rs
crates/auroraview-history/tests/: history_tests.rs
crates/auroraview-mcp/: Cargo.toml  README.md  pyproject.toml
crates/auroraview-mcp-server/: Cargo.toml
crates/auroraview-mcp-server/src/: lib.rs  main.rs  parent_monitor.rs
crates/auroraview-mcp-server/tests/: http_integration.rs  ipc_integration.rs
crates/auroraview-mcp/benches/: mcp_benchmark.rs
crates/auroraview-mcp/examples/: basic_usage.rs
crates/auroraview-mcp/src/: agui.rs  cdp.rs  config.rs  dispatcher.rs  error.rs  lib.rs  mcp_server.rs  mdns.rs  oauth.rs  protocol.rs  python.rs  python_bindings.rs  registry.rs  runner.rs  server.rs  tool.rs  types.rs
crates/auroraview-mcp/tests/: agui_tests.rs  cdp_tests.rs  error_mdns_tests.rs  http_transport_tests.rs  integration_test.rs  mdns_integration_test.rs  param_validation_tests.rs  python_bindings_tests.rs  runner_mdns_tests.rs  runner_validate_tests.rs  server_tests.rs  sse_e2e_tests.rs  tool_agui_tests.rs
crates/auroraview-notifications/: Cargo.toml
crates/auroraview-notifications/src/: error.rs  lib.rs  manager.rs  notification.rs  permission.rs
crates/auroraview-notifications/tests/: notification_tests.rs
crates/auroraview-pack/: Cargo.toml
crates/auroraview-pack/src/: bundle.rs  cli_dump.rs  common.rs  config.rs  deps_collector.rs  downloader.rs  error.rs  extension_downloader.rs  generator.rs  icon.rs  lib.rs  license.rs  manifest.rs  metrics.rs  migration.rs  mod.rs  overlay.rs  packer.rs  progress.rs  protection.rs  pyembed_integration.rs  pyoxidizer.rs  python_standalone.rs  resource_editor.rs  templates.rs  vx_tool.rs
crates/auroraview-pack/templates/: cargo_toml.txt  cargo_toml_pyembed.txt  main_frontend.rs.txt  main_fullstack.rs.txt  main_url.rs.txt
crates/auroraview-pack/tests/: builder_tests.rs  bundle_tests.rs  config_tests.rs  deps_collector_tests.rs  error_tests.rs  generator_tests.rs  hooks_tests.rs  lib_tests.rs  license_tests.rs  manifest_tests.rs  metrics_tests.rs  overlay_tests.rs  packer_tests.rs  progress_tests.rs  pyoxidizer_tests.rs  python_standalone_tests.rs
crates/auroraview-settings/: Cargo.toml
crates/auroraview-tabs/: Cargo.toml
crates/auroraview-telemetry/: Cargo.toml
crates/auroraview-testing/: Cargo.toml
crates/auroraview-ue/: Cargo.toml  README.md
(+1293 files in other folders)
