[package]
name = "auroraview"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Hal Long <hal.long@outlook.com>"]
description = "AuroraView: Rust-powered WebView for Python apps & DCC embedding (PyO3/abi3)"
license = "MIT"
repository = "https://github.com/loonghao/auroraview"
keywords = ["webview", "rust", "python", "wry", "pyo3", "dcc"]
categories = ["gui", "multimedia", "graphics"]

[lib]
name = "auroraview_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.24.1", features = ["extension-module", "abi3-py37"], optional = true }

# Wry for WebView
wry = "0.47"
tao = "0.30"

# Window handle for DCC integration
raw-window-handle = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL handling
url = "2.5"

# Thread safety
parking_lot = "0.12"
once_cell = "1.20"

# IPC communication
crossbeam-channel = "0.5"
dashmap = "5.5"
ipc-channel = { version = "0.18", optional = true }

# CPU detection for Servo config
num_cpus = "1.16"

# Future rendering engines (feature-gated)
# servo = { git = "https://github.com/servo/servo", optional = true }
# winit = { version = "0.29", optional = true }

[dev-dependencies]
# Testing frameworks
criterion = "0.5"
tempfile = "3.14"

# Enhanced testing
rstest = "0.23"              # Parameterized testing
test-case = "3.3"            # Table-driven tests
proptest = "1.5"             # Property-based testing
mockall = "0.13"             # Mocking framework
serial_test = "3.2"          # Serial test execution

[build-dependencies]
# Build script dependencies if needed

# Platform-specific linking for Python
[target.x86_64-unknown-linux-gnu.dependencies]
# Python linking for Linux tests

[target.x86_64-pc-windows-msvc.dependencies]
# Python linking for Windows tests
# Windows API for parent window support
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.x86_64-apple-darwin.dependencies]
# Python linking for macOS tests

[target.aarch64-apple-darwin.dependencies]
# Python linking for Apple Silicon tests

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[features]
default = ["python-bindings", "threaded-ipc", "wry-backend"]
python-bindings = ["pyo3"]

# Rendering backend features
# Only one backend can be active at a time
wry-backend = []           # System WebView (WebView2/WebKit) - default
# servo-backend = ["servo", "winit"]  # Servo rendering engine - experimental
# custom-backend = []        # Custom user-provided renderer - advanced

# IPC backend features
threaded-ipc = []
process-ipc = ["ipc-channel"]

# Platform-specific features
windows = []
macos = []
linux = []

# Development features
dev-tools = []
hot-reload = []

# Performance features
performance-monitoring = []  # Enable detailed performance tracking
ipc-batching = []           # Enable IPC message batching

