[package]
name = "aurora-protect"
version = "0.1.0"
edition = "2021"
description = "Python code protection via Cython compilation using py2pyd"
license = "MIT"
authors = ["Hal Long <hal.long@outlook.com>"]

[lib]
name = "aurora_protect"
crate-type = ["lib"]

[dependencies]
# Core: Python to pyd compilation
py2pyd = "0.1"

# Symmetric encryption
# - AES-256-GCM for fast authenticated encryption
# - ChaCha20-Poly1305 for X25519 hybrid encryption
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

# Asymmetric encryption (ECC)
# - X25519 for ECDH key exchange (fast, modern, safe)
# - P-256 for FIPS compliance (optional)
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
p256 = { version = "0.13", features = ["ecdh"] }

# Hashing and encoding
blake3 = "1.5"
base64 = "0.22"
rand = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# File walking
walkdir = "2.5"

# Glob pattern matching
regex = "1.11"


[dev-dependencies]
tempfile = "3.14"
