[package]
name = "auroraview-ai-agent"
version = "0.1.0"
edition = "2021"
authors = ["AuroraView Contributors"]
description = "AI Agent integration for AuroraView with multi-provider support and AGUI/A2UI protocol"
license = "MIT"
repository = "https://github.com/loonghao/auroraview"
keywords = ["webview", "ai", "agent", "llm", "browser"]
categories = ["gui", "web-programming"]
rust-version = "1.70"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt", "sync", "macros"] }
async-trait = "0.1"
futures = "0.3"

# Multi-provider AI client (supports OpenAI, Anthropic, Gemini, DeepSeek, Ollama, etc.)
# https://github.com/jeremychone/rust-genai - 614+ stars
genai = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID for message IDs
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"

# Error handling
thiserror = "2"

# URL handling
url = "2"
urlencoding = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
rstest = "0.23"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = []

# Python bindings support
python = []
