[package]
name = "auroraview-ai-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "AI Agent integration for AuroraView with multi-provider support and AGUI/A2UI protocol"
license.workspace = true
repository.workspace = true
keywords = ["webview", "ai", "agent", "llm", "browser"]
categories = ["gui", "web-programming"]
rust-version.workspace = true

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt", "sync", "macros"] }
async-trait = "0.1"
futures = "0.3"

# Multi-provider AI client (supports OpenAI, Anthropic, Gemini, DeepSeek, Ollama, etc.)
# https://github.com/jeremychone/rust-genai - 614+ stars
genai = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID for message IDs
uuid = { version = "1.11", features = ["v4"] }

# Logging
tracing = "0.1"

# Error handling
thiserror = "2.0"

# URL handling
url = "2.5"
urlencoding = "2.1"

# Time
chrono = { version = "0.4", features = ["serde"] }
auroraview-workspace-hack = { version = "0.1", path = "../auroraview-workspace-hack" }

[dev-dependencies]
rstest = "0.26"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = []
