[package]
name = "auroraview-assets"
description = "Frontend assets for AuroraView - Loading, Error, and Browser UI components"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Embed static assets at compile time
rust-embed = { version = "8.5", features = ["debug-embed", "include-exclude"] }

# MIME type detection
mime_guess = "2.0"

# Error handling
thiserror = "2"

# Lazy initialization
once_cell = "1.20"

# Optional compression for embedded assets
include_dir = { version = "0.7", optional = true }

[build-dependencies]
# For running npm build during cargo build
# We'll use a simple approach without extra deps

[features]
default = []
# Use pre-built assets (for release builds)
prebuilt = []
# Embed assets in binary (for single-file distribution)
embed = []

[dev-dependencies]
tempfile = "3.14"
