[package]
name = "auroraview-assets"
description = "Frontend assets for AuroraView - Loading, Error, and Browser UI components"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Embed static assets at compile time
rust-embed = { version = "8.5", features = ["debug-embed", "include-exclude"] }

# MIME type detection
mime_guess = "2.0"

# Error handling
thiserror = "2"

auroraview-workspace-hack = { version = "0.1", path = "../auroraview-workspace-hack" }

[build-dependencies]
# For running npm build during cargo build
# We'll use a simple approach without extra deps

[features]
default = []

[dev-dependencies]
tempfile = "3.20"
rstest = "0.26"
