[package]
name = "auroraview-bookmarks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Bookmark management for AuroraView WebView applications"
keywords = ["webview", "bookmarks", "browser"]
categories = ["gui", "web-programming"]

[lib]
name = "auroraview_bookmarks"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Thread safety
parking_lot = "0.12"

# Logging
tracing = "0.1"

# Error handling
thiserror = "2.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1.11", features = ["v4"] }

# Directory paths
dirs = "6.0"

[dev-dependencies]
rstest = "0.26"
tempfile = "3.14"
