[package]
name = "auroraview-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AuroraView CLI: Command-line interface for WebView applications"
keywords = ["webview", "cli", "rust", "wry"]
categories = ["command-line-utilities", "gui"]
build = "build.rs"

[lib]
name = "auroraview_cli"
path = "src/lib.rs"

[[bin]]
name = "auroraview-cli"
path = "src/main.rs"

[dependencies]
# Core utilities and assets
auroraview-core = { path = "../auroraview-core" }

# Frontend assets (loading, error, browser pages)
auroraview-assets = { path = "../auroraview-assets" }

# Plugin system for built-in plugins (fs, clipboard, shell, dialog, etc.)
auroraview-plugins = { path = "../auroraview-plugins" }

# Pack functionality
auroraview-pack = { path = "../auroraview-pack", features = ["code-protection"] }

# Wry for WebView (direct dependency for CLI)
wry = "0.54.1"
tao = "0.34.5"

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Progress bars and spinners
indicatif = "0.17"
console = "0.15"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
time = { version = "0.3", features = ["formatting", "local-offset"] }

# Serialization for config files
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL handling
url = "2.5"
urlencoding = "2.1"
regex = "1.11"

# File path handling
dunce = "1.0"
path-clean = "1.0"
dirs = "6.0"

# MIME type detection
mime_guess = "2.0"

# Compression and archive for runtime extraction
flate2 = "1.0"
tar = "0.4"

# Open URLs/files in system default application
open = "5.3"

# Image processing for window icon
image = { version = "0.25", default-features = false, features = ["png"] }

# Embed static assets
rust-embed = "8.5"

# Parallel processing
rayon = "1.10"

# IPC communication (for Python backend)
ipckit = "0.1"

# Self-update functionality
reqwest = { version = "0.13", features = ["blocking", "json"] }
zip = { version = "4", default-features = false, features = ["deflate"] }

self-replace = "1.5"

[target.'cfg(windows)'.dependencies]
# WebView2 COM bindings for warmup
webview2-com = "0.38"
windows = { version = "0.61", features = [
    "Win32_System_Com",
    "Win32_System_Console",
] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
rstest = "0.24"
