[package]
name = "auroraview-dcc"
version = "0.4.5"
edition = "2021"
description = "DCC (Digital Content Creation) runtime for AuroraView - Maya, Houdini, Nuke, Blender integration"
license = "MIT"
repository = "https://github.com/AuroraView/auroraview"
keywords = ["webview", "dcc", "maya", "houdini", "blender"]
categories = ["gui", "multimedia"]

[dependencies]
auroraview-core = { path = "../auroraview-core" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Error handling
thiserror = "2.0"

# Platform specific (Windows WebView2)
[target.'cfg(windows)'.dependencies]
webview2-com = "0.35"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_WinRT",
] }

[features]
default = []
qt = []  # Enable Qt integration helpers

[dev-dependencies]
rstest = "0.24"
