[package]
name = "auroraview-desktop"
version = "0.4.5"
edition = "2021"
description = "Desktop runtime for AuroraView - standalone WebView applications"
license = "MIT"
repository = "https://github.com/AuroraView/auroraview"
keywords = ["webview", "desktop", "gui", "tauri", "electron"]
categories = ["gui", "web-programming"]

[dependencies]
auroraview-core = { path = "../auroraview-core" }
auroraview-plugins = { path = "../auroraview-plugins" }

# WebView
wry = "0.53.5"
tao = "0.32"

# System tray
tray-icon = "0.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Error handling
thiserror = "2.0"

# Image loading
image = "0.25"

# Ctrl+C handling
ctrlc = "3.4"

# Platform specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_Com",
] }
raw-window-handle = "0.6"

[features]
default = []
test-helpers = []

[dev-dependencies]
rstest = "0.24"
