[package]
name = "auroraview-desktop"
version.workspace = true
edition.workspace = true
description = "Desktop runtime for AuroraView - standalone WebView applications"
license.workspace = true
repository.workspace = true
keywords = ["webview", "desktop", "gui", "tauri", "electron"]
categories = ["gui", "web-programming"]

[dependencies]
auroraview-core = { path = "../auroraview-core" }
auroraview-plugins = { path = "../auroraview-plugins" }

# WebView
wry = "0.54.4"
tao = "0.34.6"

# System tray
tray-icon = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Error handling
thiserror = "2.0"

# Concurrent map (replaces RwLock<HashMap>)
dashmap = "6.1"

# Image loading
image = "0.25"

# Ctrl+C handling
ctrlc = "3.4"
auroraview-workspace-hack = { version = "0.1", path = "../auroraview-workspace-hack" }

# Platform specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_Com",
] }
raw-window-handle = "0.6"

[features]
default = []

[dev-dependencies]
rstest = "0.26"
