[package]
name = "auroraview-devtools"
version = "0.1.0"
edition = "2021"
description = "DevTools and CDP (Chrome DevTools Protocol) support for AuroraView"
license = "MIT"
repository = "https://github.com/aspect-apps/auroraview"
keywords = ["webview", "devtools", "cdp", "browser"]
categories = ["gui", "web-programming", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]

[features]
default = []
