[package]
name = "auroraview-devtools"
version.workspace = true
edition.workspace = true
description = "DevTools and CDP (Chrome DevTools Protocol) support for AuroraView"
license.workspace = true
repository.workspace = true
keywords = ["webview", "devtools", "cdp", "browser"]
categories = ["gui", "web-programming", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
auroraview-workspace-hack = { version = "0.1", path = "../auroraview-workspace-hack" }

[dev-dependencies]

[features]
default = []
