[package]
name = "auroraview-extensions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Browser extension compatibility layer - 1:1 Chrome Extension API support for WebView applications"
keywords = ["webview", "extensions", "chrome", "browser", "manifest-v3"]
categories = ["gui", "web-programming"]
readme = "README.md"

[lib]
name = "auroraview_extensions"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

# Async runtime
tokio = { version = "1.48", features = ["fs", "sync", "rt", "macros"] }

# File system operations
walkdir = "2.5"

# Path utilities
dunce = "1.0"

# UUID for extension IDs
uuid = { version = "1.11", features = ["v4"] }

# Thread safety
parking_lot = "0.12"
dashmap = "6.1"

# URL handling
url = "2.5"
urlencoding = "2.1"

# Regex for content script matching
regex = "1.11"

# CRX ZIP payload extraction
zip = { version = "8", default-features = false, features = ["deflate"] }

# Time handling
chrono = "0.4"

# Embedded assets
rust-embed = { version = "8.5", features = ["include-exclude"] }
auroraview-workspace-hack = { version = "0.1", path = "../auroraview-workspace-hack" }

[dev-dependencies]
tempfile = "3.20"
tokio-test = "0.4"
rstest = "0.26"
