[package]
name = "auroraview-history"
version.workspace = true
edition.workspace = true
description = "Browser history management for AuroraView"
license.workspace = true
repository.workspace = true
keywords = ["webview", "history", "browser"]
categories = ["gui", "web-programming"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2.0"
auroraview-workspace-hack = { version = "0.1", path = "../auroraview-workspace-hack" }

[dev-dependencies]
tempfile = "3"

[features]
default = []
