[package]
name = "auroraview-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AuroraView adapter crate for dcc-mcp-core — exposes an AuroraView instance as a DccAdapter over CDP WebSocket"
keywords = ["auroraview", "mcp", "dcc", "cdp", "webview"]
categories = ["api-bindings", "gui"]

[lib]
name = "auroraview_mcp"

[dependencies]
# dcc-mcp-core protocols (DccAdapter trait + types). Pinned to v0.13.2; not
# yet published to crates.io, so depend via git.
dcc-mcp-protocols = { git = "https://github.com/loonghao/dcc-mcp-core.git", tag = "v0.13.2" }

# Async runtime + WebSocket for CDP transport.
tokio = { version = "1.48", features = ["rt-multi-thread", "net", "sync", "time", "macros"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# JSON for CDP messages.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 decoding of Page.captureScreenshot responses.
base64 = "0.22"

# HTTP client for CDP target discovery (`http://<host>:<port>/json/version`).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling + logging.
thiserror = "2.0"
tracing = "0.1"

# Workspace dep unification (same as every other crate in this workspace).
auroraview-workspace-hack = { version = "0.1", path = "../auroraview-workspace-hack" }

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
