[package]
name = "auroraview-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AuroraView adapter crate for dcc-mcp-core — exposes an AuroraView instance as a DccAdapter over CDP WebSocket"
keywords = ["auroraview", "mcp", "dcc", "cdp", "webview"]
categories = ["api-bindings", "gui"]

[lib]
name = "auroraview_mcp"

[dependencies]
# dcc-mcp-core protocols (DccAdapter trait + types). Pinned to v0.13.2; not
# yet published to crates.io, so depend via git.
dcc-mcp-protocols = { git = "https://github.com/loonghao/dcc-mcp-core.git", tag = "v0.13.2" }

# MCP SDK — exposes WebView management tools via Model Context Protocol.
rmcp = { version = "1.5.0", features = [
    "server",
    "macros",
    "schemars",
    "transport-streamable-http-server",
    "auth",
    "elicitation",
] }

# HTTP framework for MCP Streamable HTTP transport and AG-UI SSE endpoints.
axum = "0.7"

# mDNS broadcast for auto-discovery by dcc-mcp-client.
mdns-sd = "0.10"

# Unique identifiers for WebView instances.
uuid = { version = "1.7", features = ["v4", "serde"] }

# JSON Schema derivation (required by rmcp for tool parameter schemas).
schemars = "0.8"

# Async runtime + WebSocket for CDP transport.
tokio = { version = "1.48", features = ["rt-multi-thread", "net", "sync", "time", "macros"] }
tokio-tungstenite = "0.24"
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
futures = "0.3"
dashmap = "6.1"

# JSON for CDP messages and MCP tool params.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 decoding of Page.captureScreenshot responses.
base64 = "0.22"

# HTTP client for CDP target discovery (`http://<host>:<port>/json/version`).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling + logging.
thiserror = "2.0"
tracing = "0.1"
anyhow = "1.0"

# OAuth 2.0 dependencies (for `auth` feature usage).
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
bcrypt = "0.15"
sha2 = "0.10"
chrono = "0.4"
base64-url = "2.0"

# Workspace dep unification (same as every other crate in this workspace).
auroraview-workspace-hack = { version = "0.1", path = "../auroraview-workspace-hack" }

# Python bindings (optional, enabled via `python-bindings` feature).
# abi3-py37: built wheel runs on CPython 3.7+ without recompilation.
pyo3 = { version = "0.27.2", features = ["abi3-py37"], optional = true }

[features]
python-bindings = ["dep:pyo3"]  # Python bindings via pyo3 (enabled by consumer if needed)

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
rstest = "0.25"
