[package]
name = "auroraview-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AuroraView adapter crate for dcc-mcp-core — exposes an AuroraView instance as a DccAdapter over CDP WebSocket"
keywords = ["auroraview", "mcp", "dcc", "cdp", "webview"]
categories = ["api-bindings", "gui"]

[lib]
name = "auroraview_mcp"

[dependencies]
# RMCP - Official Rust MCP SDK for Model Context Protocol Server implementation.
# Locked to 1.5.x to avoid breaking API changes in 1.6.0.
rmcp = { version = "~1.5.0", features = ["server", "macros", "transport-streamable-http-server"] }

# dcc-mcp-core protocols (DccAdapter trait + types). Not yet published to
# crates.io, so depend via git.
dcc-mcp-protocols = { git = "https://github.com/loonghao/dcc-mcp-core.git", tag = "v0.15.0" }

# Async runtime + WebSocket for CDP transport.
tokio = { version = "1.48", features = ["rt-multi-thread", "net", "sync", "time", "macros"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# JSON for CDP messages and MCP protocol.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 decoding of Page.captureScreenshot responses.
base64 = "0.22"

# HTTP client for CDP target discovery (`http://<host>:<port>/json/version`).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling + logging.
thiserror = "2.0"
tracing = "0.1"

# JSON Schema generation for MCP tool parameters (match rmcp's version).
schemars = "1.2"

# mDNS for service discovery (allow dcc-mcp-client to auto-discover this server).
mdns-sd = "0.17"

# Warp for HTTP/SSE transport (MCP standard).
warp = { version = "0.4", features = ["server"] }

# Workspace dep unification (same as every other crate in this workspace).
auroraview-workspace-hack = { version = "0.1", path = "../auroraview-workspace-hack" }
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
sha2 = "0.11.0"
uuid = "1.23.1"
dashmap = "6.1.0"
anyhow = "1.0.102"
tokio-util = "0.7.18"
base64-url = "3.0.3"
axum = "0.8.9"
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures = "0.3.32"
chrono = "0.4.44"
bcrypt = "0.19.0"
pyo3 = { version = "0.27", optional = true }

[features]
default = []
# Enable PyO3 Python bindings for McpServer
python-bindings = ["dep:pyo3"]

[dev-dependencies]
rstest = "0.26.1"
criterion = "0.8"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# rmcp client for integration tests
rmcp = { version = "~1.5.0", features = ["client", "macros"] }
# Serial test execution to avoid port conflicts
serial_test = "3.2"
# OAuth test dependencies
sha2 = "0.11.0"
base64-url = "3.0.3"
urlencoding = "2.1.3"

[[bench]]
name = "mcp_benchmark"
harness = false
