[package]
name = "auroraview-notifications"
version = "0.1.0"
edition = "2021"
description = "Notification system for AuroraView"
license = "MIT"
repository = "https://github.com/aspect-build/auroraview"
keywords = ["notifications", "toast", "alerts"]
categories = ["gui"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
parking_lot = "0.12"

[dev-dependencies]
rstest = "0.24"
