[package]
name = "auroraview-notifications"
version.workspace = true
edition.workspace = true
description = "Notification system for AuroraView"
license.workspace = true
repository.workspace = true
keywords = ["notifications", "toast", "alerts"]
categories = ["gui"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
parking_lot = "0.12"
auroraview-workspace-hack = { version = "0.1", path = "../auroraview-workspace-hack" }

[dev-dependencies]
rstest = "0.26"
