[package]
name = "auroraview-pack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AuroraView Pack: Zero-dependency application packaging"
keywords = ["webview", "packaging", "bundler", "rust"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "auroraview_pack"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

# File system operations
walkdir = "2.5"
glob = "0.3"

# Compression
zstd = "0.13"
flate2 = "1.0"

# Archive format
tar = "0.4"

# System directories
dirs = "6.0"

# Machine ID
hostname = "0.4"

[dev-dependencies]
# Testing utilities
tempfile = "3.20"
